FIXES #10: Overflow is added correctly and scrolling should be possible again.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,7 +28,8 @@ body {
   width:100%;
   min-height:100%;
   background: #eee;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 a {
